--- a/Ez_Maze_Git/core/build.gradle
+++ b/Ez_Maze_Git/core/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: "java"
 
 sourceCompatibility = 1.7
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+[compileJava, compileTestJava]*.options*.encoding = 'Cp1252'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
