--- a/Ez_Maze_Git/desktop/build.gradle
+++ b/Ez_Maze_Git/desktop/build.gradle
@@ -25,6 +25,7 @@ task debug(dependsOn: classes, type: JavaExec) {
 }
 
 task dist(type: Jar) {
+	baseName = "EzMaze"
     manifest {
         attributes 'Main-Class': project.mainClassName
     }
