Ajout du début du GUI, dans l'attente d'avancement des autres objectifs

--- a/Ez_Maze_Git/desktop/.project
+++ b/Ez_Maze_Git/desktop/.project
@@ -24,7 +24,7 @@
 		<link>
 			<name>assets</name>
 			<type>2</type>
-			<location>C:/Users/hp/.tooling/ACL_2019_EzMaze/Ez_Maze_Git/core/assets</location>
+			<location>D:/GIT_PROJET/ACL_2019_EzMaze/Ez_Maze_Git/core/assets</location>
 		</link>
 	</linkedResources>
 </projectDescription>
